// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - SumPro Input Forms 1`] = `
[
  0.7,
  0,
  0,
  0.21,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - SumPro Input Forms 2`] = `
[
  0.7,
  0,
  0,
  0.14,
  0,
  0.7,
  0,
  -0.1806,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - SumPro Input Forms 3`] = `
[
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0.1526,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - SumPro Input Forms 4`] = `
[
  0.19589,
  0,
  0,
  0.00706,
  0,
  0.2226,
  0,
  -0.0756,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
